Update quick links and API docs to point to user repository

--- a/templates/base.html
+++ b/templates/base.html
@@ -159,7 +159,7 @@
                             <li><a class="dropdown-item" href="/api/health">Health Check</a></li>
                             <li><a class="dropdown-item" href="/api/platforms">Supported Platforms</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="https://github.com/yourusername/feelnet#api-usage" target="_blank">API Documentation</a></li>
+                            <li><a class="dropdown-item" href="https://github.com/1505-Ak/feelnet#api-usage" target="_blank">API Documentation</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -198,13 +198,13 @@
                 <div class="col-md-6 text-md-end">
                     <h6>Quick Links</h6>
                     <div class="d-flex flex-column flex-md-row justify-content-md-end">
-                        <a href="https://github.com/yourusername/feelnet" class="text-light me-3" target="_blank">
+                        <a href="https://github.com/1505-Ak/feelnet" class="text-light me-3" target="_blank">
                             <i class="fab fa-github"></i> GitHub
                         </a>
-                        <a href="https://github.com/yourusername/feelnet#api-usage" class="text-light me-3" target="_blank">
+                        <a href="https://github.com/1505-Ak/feelnet#api-usage" class="text-light me-3" target="_blank">
                             <i class="fas fa-book"></i> API Docs
                         </a>
-                        <a href="https://github.com/yourusername/feelnet/issues" class="text-light" target="_blank">
+                        <a href="https://github.com/1505-Ak/feelnet/issues" class="text-light" target="_blank">
                             <i class="fas fa-bug"></i> Report Issue
                         </a>
                     </div>
